--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="hdr-inner">
     <a href="#" class="brand">
       <div class="brand-icon">HCC</div>
-      <div class="brand-name">Houston Carpet<br>Cleaning</div>
+      <div class="brand-name">Houston Carpet Cleaning</div>
     </a>
     <nav class="main-nav" id="mainNav">
       <a href="#services">Services</a>
@@ -40,17 +40,17 @@
       <p>HCC delivers deep-clean results using eco-safe methods and truck-mounted extraction. Your carpets restored — guaranteed.</p>
       <div class="hero-actions">
         <a href="#schedule" class="btn btn-fill">Book Online</a>
-        <a href="tel:+18325551234" class="btn btn-ghost">
+        <a href="tel:+13464250716" class="btn btn-ghost">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"><path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72c.127.96.361 1.903.7 2.81a2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0122 16.92z"/></svg>
-          (832) 555-1234
+          (346) 425-0716
         </a>
       </div>
     </div>
     <div class="hero-right">
       <div class="hero-card">
         <div class="hero-card-row">
-          <div class="hc-stat"><span class="hc-num">2,400<sup>+</sup></span><span class="hc-label">Homes Served</span></div>
-          <div class="hc-stat"><span class="hc-num">4.9<small>/5</small></span><span class="hc-label">Google Rating</span></div>
+          <div class="hc-stat"><span class="hc-num">500<sup>+</sup></span><span class="hc-label">Homes Served</span></div>
+          <div class="hc-stat"><span class="hc-num">100%</span><span class="hc-label">Satisfaction Guaranteed</span></div>
         </div>
         <div class="hero-card-row">
           <div class="hc-stat"><span class="hc-num">100%</span><span class="hc-label">Eco-Friendly</span></div>
@@ -133,7 +133,7 @@
           <div class="row-2">
             <div class="input-wrap">
               <label>Phone *</label>
-              <input type="tel" id="inPhone" placeholder="(832) 555-1234">
+              <input type="tel" id="inPhone" placeholder="(346) 425-0716">
             </div>
             <div class="input-wrap">
               <label>Email *</label>
@@ -192,7 +192,7 @@
       <div class="ft-main">
         <a href="#" class="brand" style="margin-bottom:1.25rem;">
           <div class="brand-icon">HCC</div>
-          <div class="brand-name" style="color:#fff;">Houston Carpet<br>Cleaning</div>
+          <div class="brand-name" style="color:#fff;">Houston Carpet Cleaning</div>
         </a>
         <p>Premium carpet &amp; upholstery care for Katy, West Houston, Sugar Land, and surrounding communities.</p>
       </div>
@@ -211,7 +211,8 @@
       </div>
       <div class="ft-col">
         <h6>Contact</h6>
-        <a href="tel:+18325551234">(832) 555-1234</a>
+        <span>David</span>
+        <a href="tel:+13464250716">(346) 425-0716</a>
         <a href="mailto:info@houstoncarpetcleaning.com">info@houstoncarpetcleaning.com</a>
         <span>Mon – Sat &middot; 8 AM – 6 PM</span>
       </div>
